manifest/demoteam2/two-apps/prod/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: two-apps-api
    env: prod
    team: demoteam2
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: two-apps-api
    tags.datadoghq.com/version: sha-bb2053d
  name: two-apps-api
spec:
  template:
    metadata:
      annotations:
        ad.datadoghq.com/main.logs: '[{"source": "nodejs", "service": "two-apps-api"}]'
        admission.datadoghq.com/js-lib.version: v5.67.0
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam2
        app: two-apps-api
        env: prod
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: two-apps-api
        tags.datadoghq.com/version: sha-bb2053d
        admission.datadoghq.com/enabled: 'true'
    spec:
      securityContext: {}
      containers:
      - image: polarisit/two-apps:sha-bb2053d
        livenessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /health/status
            port: 8080
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '2'
            memory: 2Gi
        securityContext: {}
        ports:
        - containerPort: 8080
        name: main
        readinessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /health/status
            port: 8080
  selector:
    matchLabels:
      team: demoteam2
      app: two-apps-api
      env: prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: two-apps-api
    env: prod
    team: demoteam2
  name: two-apps-api
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: two-apps-api.prod.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: two-apps-api
        pathType: Prefix
  - host: two-apps.polarismedia.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: two-apps-api
        pathType: Prefix
  - host: two-apps-internal.polarismedia.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: two-apps-api
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: two-apps-api
    env: prod
    team: demoteam2
  name: two-apps-api
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: two-apps-api
    env: prod
    team: demoteam2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: two-apps-updater
    env: prod
    team: demoteam2
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: two-apps-updater
    tags.datadoghq.com/version: sha-bb2053d
  name: two-apps-updater
spec:
  template:
    metadata:
      annotations:
        ad.datadoghq.com/main.logs: '[{"source": "nodejs", "service": "two-apps-updater"}]'
        admission.datadoghq.com/js-lib.version: v5.67.0
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam2
        app: two-apps-updater
        env: prod
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: two-apps-updater
        tags.datadoghq.com/version: sha-bb2053d
        admission.datadoghq.com/enabled: 'true'
    spec:
      securityContext: {}
      containers:
      - image: polarisit/two-apps:sha-bb2053d
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '2'
            memory: 2Gi
        securityContext: {}
        ports:
        - containerPort: 8080
        command:
        - node
        args:
        - ./dist/src/updater/index.js
        name: main
  selector:
    matchLabels:
      team: demoteam2
      app: two-apps-updater
      env: prod
